# tree-sitter-hugo

./: .gitignore  Cargo.toml  Makefile  Package.swift  binding.gyp  dockerfile  grammar.js  package.json  pyproject.toml  setup.py  todo
bindings/c/: tree-sitter-hugo.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_hugo/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHugo/: hugo.h
examples/: hugo.html
queries/: highlights.scm  injections.scm
src/: grammar.json  parser.c
tree-sitter-go-template/src/: parser.c
tree-sitter-html/src/: parser.c
