[package]
name = "tree-sitter-hugo"
description = "Hugo grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hugo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/giteshubisz/tree-sitter-hugo"
edition = "2021"
autoexamples = false
authors = [
  "GitesHubisz <there's none email for this type of thing>",
]

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter-html/*", "tree-sitter-go-template/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
